hphp/test/zend/bad/zend/bug43344_11.php
<?php
function f($a=namespace\bar) {
	return $a;
}
echo f()."\n";
?>